--- a/v25.html
+++ b/v25.html
@@ -72,13 +72,13 @@
         <div class="rigor-container"><div id="rigor-bar" class="rigor-bar"></div></div>
         
         <label>1. Contexto ou Dados Brutos</label>
-        <textarea id="fatos" rows="4" oninput="atualizar()" placeholder="Insira fatos, textos, códigos ou problemas..."></textarea>
+        <textarea id="fatos" rows="4" oninput="atualizar()" placeholder="Insira fatos, textos ou problemas..."></textarea>
 
         <label>2. Parâmetros de Rigor (Regras ou Critérios)</label>
-        <textarea id="base" rows="3" oninput="atualizar()" placeholder="Quais normas ou critérios o sistema deve obedecer?"></textarea>
+        <textarea id="base" rows="3" oninput="atualizar()" placeholder="Quais normas o sistema deve obedecer?"></textarea>
 
         <label>3. Objetivo Final</label>
-        <input type="text" id="destino" oninput="atualizar()" placeholder="Ex: Relatório Técnico, Artigo, Análise..."></textarea>
+        <input type="text" id="destino" oninput="atualizar()" placeholder="O que você quer entregar?">
 
         <label>4. Documentação PDF</label>
         <div class="upload-area" onclick="document.getElementById('pdf-file').click()">
@@ -98,7 +98,7 @@
 </main>
 
 <footer>
-    <span class="footer-legal">Segurança Jurídica & Rigor Técnico Ativado</span>
+    <span id="status-seguranca" class="footer-legal">AUTENTICANDO...</span>
     <span class="footer-notice">O uso deste sistema é de responsabilidade exclusiva do usuário.</span><br>
     <span class="footer-notice">Este sistema não grava dados e está em total conformidade com a LGPD.</span>
 </footer>
@@ -115,6 +115,8 @@
         db.ref('clientes/' + userId).on('value', (snap) => {
             if (snap.exists()) {
                 document.getElementById('loader').style.display = 'none';
+                // MANTÉM O NOME DO USUÁRIO NO RODAPÉ
+                document.getElementById('status-seguranca').innerText = "SISTEMA LICENCIADO: " + userId.replace(/_/g, ' ').toUpperCase();
             } else {
                 document.body.innerHTML = `<div style="background:#000; height:100vh; display:flex; align-items:center; justify-content:center; color:red; text-align:center;"><h1>🛡️ ACESSO REVOGADO</h1></div>`;
             }
@@ -150,19 +152,17 @@
         
         const mestre = `### [ PROTOCOLO CÁSSIA V8 - ELITE UNIVERSAL ] ###
 IDENTIDADE: Consultor Nível 10 - Especialista em Lógica e Veracidade.
-DIRETRIZ: Bloqueio total de informações falsas, dúbias ou sem evidência.
+DIRETRIZ: Bloqueio total de informações falsas, dúbias ou "baboseiras" sem evidência.
 
-${fileName ? `DOCUMENTO: "${fileName}" (Transcrever conteúdo).\n` : ''}
+${fileName ? `DOCUMENTO: "${fileName}" (Transcrever conteúdo fielmente).\n` : ''}
 DADOS: ${f}
 CRITÉRIOS: ${b}
 MISSÃO: ${d}
 
-ESTRUTURA DE RESPOSTA:
-1. DESTRUTURAÇÃO: Filtragem contra informações duvidosas.
-2. RIGOR: Vocabulário técnico e alta performance.
-3. CONCLUSÃO: Solução real e autoridade técnica.
-
-RESPOSTA: Resultado de ponta.`;
+ETAPAS:
+1. DESTRUTURAÇÃO: Filtragem contra dados duvidosos.
+2. RIGOR: Vocabulário técnico de alta performance.
+3. RESULTADO: Solução de autoridade máxima.`;
 
         document.getElementById('prompt-final').value = mestre;
         document.getElementById('resultado-area').style.display = 'block';
