--- a/cass/index.html
+++ b/cass/index.html
@@ -33,3 +33,122 @@
         #prompt-result { width: 100%; height: 400px; background: #000; border: 1px solid #bf953f; color: #fcf6ba; padding: 30px; border-radius: 8px; font-family: 'Consolas', monospace; font-size: 14px; line-height: 1.6; }
         .export-btns { display: flex; gap: 15px; margin-top: 15px; }
         footer { margin-top: 80px; padding: 40px; text-align: center; border-top: 1px solid var(--border); font-size: 9px; opacity: 0.5; letter-spacing: 2px; line-height: 2.2; }
+    </style>
+</head>
+<body id="main-body">
+
+<nav>
+    <div class="logo-v9">V9 POWER ELITE</div>
+    <div class="top-btns">
+        <button class="btn-minimal" onclick="limpar()">Apagar Tudo</button>
+        <button class="btn-minimal" onclick="toggleMode()">Modo Claro/Escuro</button>
+    </div>
+</nav>
+
+<main>
+    <div class="glass-panel">
+        <div class="integrity-header"><span>Sincronização de Dados V9</span><span id="pct">0%</span></div>
+        <div class="bar-bg"><div id="fill" class="bar-fill"></div></div>
+
+        <div class="pdf-action" onclick="document.getElementById('pdf-up').click()">📎 Importar Dados de PDF</div>
+        <input type="file" id="pdf-up" accept="application/pdf" style="display:none" onchange="lerPDF(this)">
+
+        <div class="field-group">
+            <label>1. O que deve ser gerado?</label>
+            <input type="text" id="gerado" oninput="atualizar()" placeholder="Ex: Petição Inicial, Relatório...">
+        </div>
+
+        <div class="field-group">
+            <label>2. Objetivo (Destino do Comando)</label>
+            <input type="text" id="destino" oninput="atualizar()" placeholder="Qual o resultado esperado?">
+        </div>
+
+        <div class="field-group">
+            <label>3. Registro dos Fatos (Base de Dados)</label>
+            <textarea id="fatos" rows="10" oninput="atualizar()" placeholder="Insira o texto bruto ou use o PDF..."></textarea>
+        </div>
+
+        <button class="btn-supreme" onclick="gerar()">Executar Engenharia V9 Power</button>
+    </div>
+
+    <div id="output-zone">
+        <label>Comando Supremo V9 [RIGOR ABSOLUTO] Gerado:</label>
+        <textarea id="prompt-result" readonly></textarea>
+        <div class="export-btns">
+            <button class="btn-supreme" style="flex: 1; background:transparent; border:1px solid #bf953f; color:#bf953f;" onclick="copiar()">Copiar Prompt</button>
+            <button class="btn-supreme" style="flex: 1; background: #bf953f; color: #000;" onclick="exportarWord()">Baixar em Word (.doc)</button>
+        </div>
+    </div>
+</main>
+
+<footer>
+    CÁSSIA PROMPT ® | TECNOLOGIA V9 POWER ELITE EDITION<br>
+    SISTEMA DE ENGENHARIA DE PROMPT DE ALTA PRECISÃO<br>
+    A RESPONSABILIDADE É DE QUEM ESTÁ USANDO. O PROGRAMA APENAS GERA O PROMPT.
+</footer>
+
+<script>
+    function toggleMode() { document.getElementById('main-body').classList.toggle('light-mode'); }
+    
+    function limpar() {
+        document.getElementById('gerado').value = "";
+        document.getElementById('destino').value = "";
+        document.getElementById('fatos').value = "";
+        document.getElementById('output-zone').style.display = 'none';
+        atualizar();
+    }
+
+    async function lerPDF(input) {
+        const file = input.files[0];
+        if(!file) return;
+        const reader = new FileReader();
+        reader.onload = async function() {
+            const typedarray = new Uint8Array(this.result);
+            const pdf = await pdfjsLib.getDocument(typedarray).promise;
+            let fullText = "";
+            for(let i=1; i<=pdf.numPages; i++) {
+                const page = await pdf.getPage(i);
+                const content = await page.getTextContent();
+                fullText += content.items.map(s => s.str).join(" ") + "\n";
+            }
+            document.getElementById('fatos').value = fullText;
+            atualizar();
+        };
+        reader.readAsArrayBuffer(file);
+    }
+
+    function atualizar() {
+        let p = Math.min(100, (document.getElementById('gerado').value.length * 2) + (document.getElementById('destino').value.length * 2) + (document.getElementById('fatos').value.length / 50));
+        document.getElementById('fill').style.width = p + "%";
+        document.getElementById('pct').innerText = Math.round(p) + "%";
+    }
+
+    function gerar() {
+        const g = document.getElementById('gerado').value;
+        const d = document.getElementById('destino').value;
+        const f = document.getElementById('fatos').value;
+        
+        const promptMaster = `### [ORDEM SUPREMA - SISTEMA V9 POWER ELITE] ###\n\nVOCÊ É UM EXPERT EM ENGENHARIA JURÍDICA E JURISPRUDENCIAL.\n\n1. GERAR: ${g}\n2. OBJETIVO: ${d}\n\n[DIRETRIZES]: Use lei seca e jurisprudência STF/STJ. Se não houver certeza, escreva: "Fundamentação pendente de análise humana". PROIBIDO INVENTAR.\n\n[FATOS]:\n${f}`;
+
+        document.getElementById('prompt-result').value = promptMaster;
+        document.getElementById('output-zone').style.display = 'block';
+    }
+
+    function exportarWord() {
+        const content = document.getElementById('prompt-result').value;
+        const blob = new Blob(['\ufeff', content], { type: 'application/msword' });
+        const url = URL.createObjectURL(blob);
+        const link = document.createElement('a');
+        link.href = url;
+        link.download = 'Comando_V9_Elite.doc';
+        link.click();
+    }
+
+    function copiar() {
+        document.getElementById('prompt-result').select();
+        document.execCommand('copy');
+        alert("💎 Prompt V9 Copiado!");
+    }
+</script>
+</body>
+</html>
