--- a/v25.html
+++ b/v25.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>V14 THE PERFECT 10 | CÁSSIA PROMPT</title>
+    <title>V15 THE ULTIMATE 10 | CÁSSIA PROMPT</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
     <style>
         :root { --bg: #050505; --card: rgba(12, 12, 12, 0.98); --text: #ffffff; --gold: linear-gradient(135deg, #bf953f 0%, #fcf6ba 45%, #b38728 70%, #fbf5b7 100%); --border: rgba(191, 149, 63, 0.3); }
@@ -30,43 +30,43 @@
 <body>
 <div class="top-controls"><button class="ctrl-btn" onclick="document.body.classList.toggle('focus-mode')">FOCO</button><button class="ctrl-btn" onclick="document.body.classList.toggle('light-mode')">TEMA</button></div>
 <div id="app-content">
-    <div class="logo-v9">V14 THE PERFECT 10</div>
+    <div class="logo-v9">V15 THE ULTIMATE 10</div>
     <main class="glass-panel">
         <div class="progress-group" id="prog-area">
-            <span class="label-rigor">Calibragem de Tom: <span id="val1">0%</span></span>
+            <span class="label-rigor">Análise de Âncoras Temporais: <span id="val1">0%</span></span>
             <div class="progress-container"><div class="progress-bar" id="bar1"></div></div>
-            <span class="label-rigor">Filtro de Ruído: <span id="val2">0%</span></span>
+            <span class="label-rigor">Estruturação de Seções: <span id="val2">0%</span></span>
             <div class="progress-container"><div class="progress-bar" id="bar2"></div></div>
         </div>
-        <span style="color:#fcf6ba; font-weight:900; cursor:pointer; font-size:11px;" onclick="document.getElementById('pdf-up').click()">📎 IMPORTAR PDF</span>
+        <span style="color:#fcf6ba; font-weight:900; cursor:pointer; font-size:11px;" onclick="document.getElementById('pdf-up').click()">📎 IMPORTAR PDF (BASE DE DADOS)</span>
         <input type="file" id="pdf-up" accept="application/pdf" style="display:none" onchange="lerPDF(this)">
         
         <div style="display:grid; grid-template-columns: 1fr 1fr; gap:15px;">
-            <div><span class="label-sugestao">ENTREGA</span><input type="text" id="gerado" placeholder="Ex: Auditoria de Patentes"></div>
-            <div><span class="label-sugestao">OBJETIVO</span><input type="text" id="destino" placeholder="Ex: Mitigar vazamento de chip"></div>
+            <div><span class="label-sugestao">ENTREGA</span><input type="text" id="gerado" placeholder="Ex: Relatório de Inspeção"></div>
+            <div><span class="label-sugestao">OBJETIVO (SEQUÊNCIA/URGÊNCIA)</span><input type="text" id="destino" placeholder="Ex: Estabilização imediata e isolamento"></div>
         </div>
 
         <div style="display:grid; grid-template-columns: 1fr 1fr; gap:15px;">
-            <div><span class="label-sugestao">TONALIDADE DA AUDIÊNCIA</span><input type="text" id="persona" placeholder="Ex: Jurídico (Severo) / C-Level (Direto)"></div>
-            <div><span class="label-sugestao">RESTRICÕES (O QUE NÃO FAZER)</span><input type="text" id="negativo" placeholder="Ex: Não use termos vagos, não alucine datas"></div>
+            <div><span class="label-sugestao">AUDIÊNCIA & DEFINIÇÃO DE TOM</span><input type="text" id="persona" placeholder="Ex: Engenharia (NBR 6118) / Defesa Civil (Evacuação)"></div>
+            <div><span class="label-sugestao">ESTRUTURA DE SEÇÕES EXIGIDA</span><input type="text" id="secoes" placeholder="Ex: Sumário (150 pal), Análise, Matriz, Plano"></div>
         </div>
 
         <span class="label-sugestao">BASE DE DADOS</span>
-        <textarea id="fatos" rows="6" placeholder="Cole os dados aqui..."></textarea>
+        <textarea id="fatos" rows="6" placeholder="Cole os fatos aqui..."></textarea>
         
-        <button class="btn-supreme" onclick="executarV14()">GERAR PROMPT 10.0</button>
+        <button class="btn-supreme" onclick="executarV15()">EXECUTAR ENGENHARIA V15</button>
         <div id="res-box" style="display:none; margin-top:25px; flex-direction:column;">
-            <button class="btn-copy" id="btnCopy" onclick="copyRes()">COPIAR</button>
-            <textarea id="res" style="height:300px; background:#000; color:#fcf6ba; font-family:monospace;"></textarea>
+            <button class="btn-copy" id="btnCopy" onclick="copyRes()">COPIAR COMANDO V15</button>
+            <textarea id="res" style="height:350px; background:#000; color:#fcf6ba; font-family:monospace; font-size:12px;"></textarea>
         </div>
     </main>
-    <footer>CÁSSIA PROMPT ® | A RESPONSABILIDADE É DO USUÁRIO.</footer>
+    <footer>CÁSSIA PROMPT ® | RESPONSABILIDADE DO USUÁRIO.</footer>
 </div>
 
 <script>
     async function lerPDF(i){const f=i.files[0];const r=new FileReader();r.onload=async function(){const ta=new Uint8Array(this.result);const pdf=await pdfjsLib.getDocument(ta).promise;let t="";for(let p=1;p<=pdf.numPages;p++){const pg=await pdf.getPage(p);const c=await pg.getTextContent();t+=c.items.map(s=>s.str).join(" ")+"\n";}document.getElementById('fatos').value=t;};r.readAsArrayBuffer(f);}
-    function copyRes(){const t=document.getElementById('res');t.select();document.execCommand('copy');document.getElementById('btnCopy').innerText="COPIADO!";setTimeout(()=>document.getElementById('btnCopy').innerText="COPIAR",2000);}
-    function executarV14() {
+    function copyRes(){const t=document.getElementById('res');t.select();document.execCommand('copy');document.getElementById('btnCopy').innerText="COPIADO!";setTimeout(()=>document.getElementById('btnCopy').innerText="COPIAR COMANDO V15",2000);}
+    function executarV15() {
         document.getElementById('prog-area').style.display='block';
         let p1=0, p2=0;
         let itv=setInterval(()=>{
@@ -74,7 +74,7 @@
             if(p1>=100 && p2<100){p2+=20;document.getElementById('bar2').style.width=p2+'%';document.getElementById('val2').innerText=p2+'%';}
             if(p2>=100){
                 clearInterval(itv);
-                const p = `CONTEXTO: ${document.getElementById('gerado').value}\nOBJETIVO: ${document.getElementById('destino').value}\nAUDIÊNCIA & TOM: ${document.getElementById('persona').value}. (Use termos técnicos para a parte técnica e linguagem de ROI para a parte executiva).\nRESTRIÇÃO NEGATIVA: ${document.getElementById('negativo').value}. Nunca use advérbios de incerteza.\n\n[SCHEMA DE MATRIZ]: | ID | Risco | P | I | Score | Nível | Ação |\n\nDIRETRIZ ANTI-ALUCINAÇÃO: Se faltar dados, liste-os em "DADOS AUSENTES" e responda "REVISÃO HUMANA NECESSÁRIA". Não preencha lacunas.\n\nBASE DE DATOS:\n${document.getElementById('fatos').value}`;
+                const p = `CONTEXTO: ${document.getElementById('gerado').value}\nOBJETIVO & URGÊNCIA: ${document.getElementById('destino').value}\nAUDIÊNCIA: ${document.getElementById('persona').value}.\nESTRUTURA OBRIGATÓRIA: ${document.getElementById('secoes').value}.\n\n[DIRETRIZES DE TOM]:\n- Para Executivos: Linguagem de ROI (impacto em custo, tempo de paralisação e decisão binária Sim/Não).\n- Para Técnicos: Terminologia normativa estrita.\n- RESTRIÇÃO: Proibido o uso de advérbios de dúvida ("talvez", "provavelmente").\n\n[SCHEMA DE MATRIZ]: | ID | Risco | P | I | Score | Nível | Ação |\n\nDIRETRIZ ANTI-ALUCINAÇÃO: Lacunas de dados devem constar em "DADOS AUSENTES" com "REVISÃO HUMANA NECESSÁRIA".\n\nBASE DE DADOS:\n${document.getElementById('fatos').value}`;
                 document.getElementById('res').value=p; document.getElementById('res-box').style.display='flex';
             }
         },50);
